# downloads_folder_organizer

./: .gitignore  README.md  pyproject.toml
downloads_folder_organizer/: organization_folder.py
tests/: test_integration.py
